--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "markdown-it": "^8.4.0",
     "mkdirp": "^0.5.1",
     "ora": "^1.3.0",
+    "postcss": "^6.0.13",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-csso": "^3.0.0",
     "rimraf": "^2.6.2"
   }
 }
